--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\tincu\\AppData\\Roaming\\NetBeans\\21\\build.properties
+user.properties.file=C:\\Users\\EQUIPO\\AppData\\Roaming\\NetBeans\\22\\build.properties
